[package]
name = "GlacierView"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
rusoto_core = "0.46"
rusoto_s3 = "0.46"
minio = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
rusoto_credential = "0.46.0"
apache-avro = "0.14"  # or whichever crate you choose
hyper = "1.5.2"
opendal = "0.50.1"
