[package]
name = "GlacierView"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusoto_core = "0.48.0"          # Updated version
rusoto_s3 = "0.48.0"            # Updated version
rusoto_credential = "0.48.0"    # Updated version
serde = { version = "1.0", features = ["derive"] }
serde_avro_fast = "2.0.0"
anyhow = "1.0"
rayon = "1.7"
